--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["laravel", "api-wrapper", "igdb", "igdb-api", "apicalypse", "wrapper"],
     "require": {
         "php": "^7.2.5",
-        "laravel/framework": "5.8.*|^6.0|^7.0",
+        "laravel/framework": "5.8.*|^6.0|^7.0|^8.0",
         "guzzlehttp/guzzle": "~6.0",
         "ext-json": "*"
     },
